# pdf2audio

./: .gitignore  CLAUDE_CODE_INSTRUCTIONS.md  README.md  app.py  pyproject.toml
pdf2audio/: __init__.py  __main__.py  audio.py  cli.py  extractor.py  synthesiser.py
